# magika-dir-stats

./: README.md
.github/workflows/: python-ci.yml  python-lint.yml  rust-ci.yml
python/: README.md  main.py  pyproject.toml
rust/: .gitignore  Cargo.toml  README.md
rust/src/: main.rs
